# pyant

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  requirements  setup.cfg  setup.py  test.sh
docs/: .buildinfo  .gitignore  Makefile  api.html  genindex.html  getting_started.md  index.html  index.md  objects.inv  py-modindex.html  pyant.instances.e3d_array_module.html  pyant.instances.e3d_array_stage1.html  pyant.instances.e3d_array_stage2.html  search.html  searchindex.js  start.html  terminology.md
docs/_autodoc/pyant/: pyant.Airy.__init__.html  pyant.Airy.angle.html  pyant.Airy.copy.html  pyant.Airy.gain.html  pyant.Airy.html  pyant.Airy.point.html  pyant.Airy.sph_angle.html  pyant.Airy.sph_gain.html  pyant.Airy.sph_point.html  pyant.Airy.wavelength.html  pyant.Array.__init__.html  pyant.Array.angle.html  pyant.Array.antenna_element.html  pyant.Array.copy.html  pyant.Array.gain.html  pyant.Array.html  pyant.Array.point.html  pyant.Array.sph_angle.html  pyant.Array.sph_gain.html  pyant.Array.sph_point.html  pyant.Array.wavelength.html  pyant.Cassegrain.__init__.html  pyant.Cassegrain.angle.html  pyant.Cassegrain.copy.html  pyant.Cassegrain.gain.html  pyant.Cassegrain.html  pyant.Cassegrain.point.html  pyant.Cassegrain.sph_angle.html  pyant.Cassegrain.sph_gain.html  pyant.Cassegrain.sph_point.html  pyant.Cassegrain.wavelength.html  pyant.FiniteCylindricalParabola.__init__.html  pyant.FiniteCylindricalParabola.angle.html  pyant.FiniteCylindricalParabola.copy.html  pyant.FiniteCylindricalParabola.gain.html  pyant.FiniteCylindricalParabola.html  pyant.FiniteCylindricalParabola.local_to_pointing.html  pyant.FiniteCylindricalParabola.point.html  pyant.FiniteCylindricalParabola.sph_angle.html  pyant.FiniteCylindricalParabola.sph_gain.html  (+72 more)
docs/_downloads/2a4cf881efccec3dbfc732dd9577d93d/: vectorized_coordinate_functions.py
docs/_downloads/31ea8bd399722efa7361bac54688a37f/: plot_omni.py
docs/_downloads/44f86eb3238e5c59d39159115648ba54/: plot_array.ipynb
docs/_downloads/672321ef16168ca17c40868c83559036/: plot_interp_antenna.ipynb
docs/_downloads/70b00378c49251bc7a005324c0b2fb89/: plot_gaussian.ipynb
docs/_downloads/9b0697b422aa8b21c5f29354641e9638/: vectorized_plotting.ipynb
docs/_downloads/a7fd1e41d3c7c474be809b296f6a8bf3/: plot_halfpipe.ipynb
docs/_downloads/b4118edaa22e84e686ff194d12be5fd6/: plot_halfpipe.py
docs/_modules/: index.html
docs/_modules/pyant/: airy.html  array.html  (+8 more)
docs/_sources/: api.rst.txt  index.rst.txt  pyant.instances.e3d_array_module.rst.txt  pyant.instances.e3d_array_stage1.rst.txt
docs/_static/: bizstyle.js
docs/assets/: style.css
docs/auto_gallery/: index.html  plot_airy_cassergrain.html  plot_array.html  plot_gaussian.html  plot_halfpipe.html  plot_interp_antenna.html  plot_omni.html  predefined_instances.html  sg_execution_times.html  vectorized_coordinate_functions.html  vectorized_gain.html  vectorized_plotting.html
docs/examples/: _wip_interpolated_MU_radar.py  _wip_interpolated_antenna_array.py  aperture_to_gain.py  complex_response_arrays.py  copying_instances.py  directivity.py  index.md  interpolated_MU_radar.py  interpolated_antenna_array.py  interpolated_beam.py  irregular_array.py  measured_beams.py  multi_beams.py  persisting_beams.py  phased_paracyl_plots.py  plot_airy_movie.py  plot_airy_vs_cassergrain.py  plot_array.py  plot_gain_surface.py  plot_gaussian.py  plot_halfpipe.py  plot_phase_steering_effects.py  plot_phased_halfpipe.py  plotting_vectored_beams.py  predefined_instances.py  predefined_parameters.py  profiling_performance.py  project_logo.py  radars.py  random_arrays.py  vectorized_coordinate_functions.py  vectorized_gain.py  vectorized_parameters.py
docs/notebooks/: index.md
docs/source/: api.rst  conf.py  index.rst  pyant.instances.e3d_array_module.rst  pyant.instances.e3d_array_stage1.rst  pyant.instances.e3d_array_stage2.rst  start.rst
docsrc/: Makefile
docsrc/source/: api.rst  conf.py  index.rst  pyant.instances.e3d_array_stage2.rst  start.rst
examples/: calibrating_instance.py  check_functionality.py  complex_response_arrays.py  copying_instances.py  dipole_array.py  inherit_doc.py  interpolated_MU_radar.py  interpolated_antenna_array.py  interpolated_array.py  measured_beams.py  multi_beams.py  multiple_pointing.py  omni.py  phased_paracyl_plots.py  plot_airy.py  plot_airy_cassergrain.py  plot_airy_movie.py  plot_all_instances.py  plot_array.py  plot_eiscat_uhf.py  plot_gain_surface.py  plot_gaussian.py  plot_halfpipe.py  plot_interp_antenna.py  plot_omni.py  plot_phase_steering_effects.py  plot_phased_halfpipe.py  plotting_tools.py  plotting_vectored_beams.py  predefined_instances.py  predefined_parameters.py  profiling_performance.py  project_logo.py  random_arrays.py  using_parameters.py  vectorized_coordinate_functions.py  vectorized_gain.py  vectorized_parameters.py  vectorized_plotting.py
pyant/: __init__.py  airy.py  antenna_library.py  array.py  beam.py  beams.py  cassegrain.py  coordinates.py  finite_cylindrical_parabola.py  gaussian.py  interpolated.py  interpolated_array.py  phased_finite_cylindrical_parabola.py  phased_paracyl_plots.py  plotting.py  unidir_rectangular_dish.py  validate.py
pyant/beams/: __init__.py  beams.py  eiscat3d.py  eiscat_3d.py  eiscat_uhf.py  esr.py  tsdr.py
pyant/instances/: __init__.py  antenna_library.py  eiscat3d.py  eiscat_uhf.py  tromso_space_debris_radar.py
scripts/: generate_api_docs.py  generate_examples_docs.py
src/clibbeam/: Makefile  array.c  beam.c  beam.h
src/libbeam/: Makefile  libarray.c  libbeam.c  libbeam.h
src/pyant/: __init__.py  airy.py  array.py  beam.py  beam_fitting.py  cassegrain.py  clib.py  clibbeam.py  coordinates.py  finite_cylindrical_parabola.py  functions.py  gaussian.py  interpolated.py  interpolated_array.py  measured.py  plotting.py  profiling.py  registry.py  statistics.py  types.py  utils.py  version.py
tests/: test_array.py  test_beam.py  test_coordinates.py  test_models.py  test_parameters.py
(+216 files in other folders)
