[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyant"
description = "Radar antenna models in python"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Daniel Kastinen", email = "daniel.kastinen@irf.se"},
    {name = "Tom Grydeland", email = "tgry@norceresearch.no"},
    {name = "Juha Vierinen", email = "juha-pekka.vierinen@uit.no"},
]
maintainers = [
    {name = "Daniel Kastinen", email = "daniel.kastinen@irf.se"},
]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.5"
dependencies = [
    "numpy >= 1.14.3",
    "scipy >= 1.1.0",
    "matplotlib >= 3.2.0",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "pyant.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyant.beams" = ["data/*"]

[project.optional-dependencies]
develop = [
    "pytest >= 6.2.5",
    "sphinx >= 4.2.0",
    "flake8 >= 6.0.0",
    "wheel >= 0.37.0",
    "build >= 0.7.0",
    "twine >= 3.4.2",
    "pytest-cov >= 4.1.0",
    "sphinx-gallery >= 0.3.1",
    "matplotlib >= 3.5.1",
    "myst-nb >= 0.17.2",
    "ipykernel >= 6.9.1",
    "radon >= 5.1.0",
    "numpydoc >= 1.2",
    "pre-commit > 3.0.0",
    "black >= 23.3.0",
    "auditwheel >= 5.4.0",
    "patchelf >= 0.14",
]
notebooks = [
    "notebook >= 6.5.4",
    "jupytext >= 1.14.5",
]
profiling = [
    "yappi >= 1.4.0",
]

[project.urls]
Documentation = "https://danielk.developer.irf.se/pyant/"
Repository = "https://github.com/danielk333/pyant"

[tool.black]
line-length = 100
target_version = ['py35', 'py36', 'py37', 'py38', 'py39', 'py310']
