[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyant"
description = "Radar antenna models in python"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Daniel Kastinen", email = "daniel.kastinen@irf.se"},
    {name = "Tom Grydeland", email = "tgry@norceresearch.no"},
    {name = "Juha Vierinen", email = "juha-pekka.vierinen@uit.no"},
]
maintainers = [
    {name = "Daniel Kastinen", email = "daniel.kastinen@irf.se"},
]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.5"
dependencies = [
    "numpy >= 1.14.3",
    "scipy >= 1.1.0",
    "matplotlib >= 3.2.0",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "pyant.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyant.beams" = ["data/*"]

[project.optional-dependencies]
develop = [
    "pytest",
    "flake8",
    "wheel",
    "build",
    "twine",
    "pytest-cov",
    "matplotlib",
    "ipykernel",
    "radon",
    "numpydoc",
    "pre-commit",
    "black",
    "auditwheel",
    "patchelf",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
profiling = [
    "yappi",
]

[project.urls]
Documentation = "https://danielk.developer.irf.se/pyant/"
Repository = "https://github.com/danielk333/pyant"

[tool.black]
line-length = 100
target_version = ['py35', 'py36', 'py37', 'py38', 'py39', 'py310']
