[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyant"
version = "1.1.0"
description = "Radar antenna models in python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Daniel Kastinen", email = "daniel.kastinen@irf.se" },
  { name = "Tom Grydeland", email = "tgry@norceresearch.no" },
  { name = "Juha Vierinen", email = "juha-pekka.vierinen@uit.no" },
]
maintainers = [{ name = "Daniel Kastinen", email = "daniel.kastinen@irf.se" }]
license = { file = "LICENSE" }
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = ["numpy >= 2", "scipy >= 1.10.0", "spacecoords >= 0.1.0"]


[project.urls]
Documentation = "https://danielk.developer.irf.se/pyant/"
Repository = "https://github.com/danielk333/pyant"


[project.optional-dependencies]
plotting = [
    "matplotlib >= 3.2.0",
]
develop = [
  "pytest",
  "flake8",
  "wheel",
  "build",
  "twine",
  "pytest-cov",
  "matplotlib",
  "ipykernel",
  "radon",
  "numpydoc",
  "black",
  "auditwheel",
  "patchelf",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-jupyter",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-section-index",
]
tests = ["pytest", "pytest-cov"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
pyant = ["py.typed"]

[tool.black]
line-length = 100


[tool.pytest.ini_options]
addopts = "-v --cov=pyant"
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]
