[metadata]
name = pyant
version = 0.9.0
description = Radar antenna models in python
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen
author_email = daniel.kastinen@irf.se
license = MIT
license_files = LICENSE
readme = README.md
url = https://github.com/danielk333/pyant
include_package_data = True
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options.package_data]
pyant.beams = data/*

[options]
python_requires = >= 3.5
install_requires =
    numpy >= 1.14.3
    scipy >= 1.1.0
    matplotlib >= 3.2.0


[options.extras_require]
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    coverage >= 6.0.2
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    radon >= 5.1.0
    setuptools >= 57.4.0
    numpydoc >= 1.2


[flake8]
ignore = D203,E251,E126,E226,W291
max-line-length = 79
exclude = src/pyant/__pycache__,src/pyant/__init__.py,src/pyant/**/__init__.py